smart office checked